# End_to_End_Medical_Chatbot

./: README.md  app.py  create_project_structure.py  pyproject.toml  requirements.txt  store_index.py
research/: trials.ipynb
src/: helper.py  prompt.py
src/embeddings/: __init__.py
static/: style.css
templates/: chat.html
